skel for widget wizard

--- a/sources/webcore/var/www/canopsis/index.html
+++ b/sources/webcore/var/www/canopsis/index.html
@@ -117,6 +117,8 @@
 		<script type="text/javascript" src="app/lib/tools.js"></script>
 		<script type="text/javascript" src="app/lib/renderers.js"></script>
 		<script type="text/javascript" src="app/lib/locale.js"></script>
+		
+		<script type="text/javascript" src="resources/lib/jqGridable/jqGridable.Ext.js"></script>
 
 		<script type="text/javascript" src="app.js"></script>
 
