reporting working with jqgridable

--- a/sources/webcore/var/www/canopsis/reporting.html
+++ b/sources/webcore/var/www/canopsis/reporting.html
@@ -32,7 +32,9 @@
 	
 	<link rel="stylesheet" type="text/css" href="resources/lib/jgauge/css/jgauge.css">
 
-	<link rel="stylesheet" type="text/css" href="resources/lib/jquery-ui/themes/base/jquery.ui.all.css">
+	<link rel="stylesheet" type="text/css" href="resources/lib/jquery-ui/css/ui-lightness/jquery-ui-1.8.16.custom.css">
+	
+	<link rel="stylesheet" type="text/css" href="resources/lib/jqGridable/jqGridable.css">
 	<link rel="stylesheet" type="text/css" href="resources/lib/pnotify/jquery.pnotify.default.css">
 	<link rel="stylesheet" type="text/css" href="resources/lib/pnotify/icons/jquery.pnotify.default.icons.css">
 
@@ -50,6 +52,8 @@
 
 	<!-- Jquery -->
 	<script type="text/javascript" src="resources/lib/jquery/jquery.min.js"></script>
+	<script type="text/javascript" src="resources/lib/jquery-ui/jquery-ui-1.8.16.custom.min.js"></script>
+	<script type="text/javascript" src="resources/lib/jqGridable/jqGridable.js"></script>
 	
 	<script type="text/javascript" src="resources/lib/jgauge/js/excanvas.min.js"></script>
 	<script type="text/javascript" src="resources/lib/jgauge/js/jQueryRotate.min.js"></script>
@@ -64,6 +68,8 @@
 	<script type="text/javascript" src="app/lib/tools.js"></script>
 	<script type="text/javascript" src="app/lib/renderers.js"></script>
 	<script type="text/javascript" src="app/lib/locale.js"></script>
+
+	<script type="text/javascript" src="resources/lib/jqGridable/jqGridable.Ext.js"></script>
 
 	<!-- starting the reporting here -->
 	<script type="text/javascript">
