--- a/examples/demo3.html
+++ b/examples/demo3.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="fr" lang="fr">
 	<head>
-		<title>jqGridable Demo 2</title>
+		<title>jqGridable Demo 3</title>
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 
 		<link rel="stylesheet" href="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8/themes/base/jquery-ui.css" type="text/css" />
@@ -21,7 +21,18 @@
 				$(this).jqGridable('widget_setContent', id, 'default content')
 			}
 			
-			$("#container").jqGridable({
+			$("#container1").jqGridable({
+				columns: 5,
+				debug: true,
+				show_grid: true,
+				draggable: true,
+				resizable:  true,
+				selectable: true,
+				on_add_widget: on_add_widget,
+			});
+
+
+			$("#container2").jqGridable({
 				columns: 5,
 				debug: false,
 				show_grid: false,
@@ -30,6 +41,9 @@
 				selectable: false,
 				on_add_widget: on_add_widget,
 			});
+
+
+
 			var dump = [
 				{ id: 'widget1', position: { left: 0, top: 0, width: 2, height: 1}},
 				{ id: 'widget2', position: { left: 0, top: 1, width: 1, height: 1}},
@@ -38,13 +52,25 @@
 				{ id: 'widget5', position: { left: 4, top: 0, width: 1, height: 2}},
 			]
 			
-			$('#container').jqGridable('load', dump)
+			$('#container1').jqGridable('load', dump)
+			
+			
+			var dump = [
+				{ id: 'widget11', position: { left: 0, top: 0, width: 2, height: 1}},
+				{ id: 'widget22', position: { left: 0, top: 1, width: 1, height: 1}},
+			]
+			
+			$('#container2').jqGridable('load', dump)
 			
 		});
 	
 
 	</script>
 	<body>
-		<div id="container"></div>
+		Container 1:<br>
+		<div id="container1" style="height: 700px; width: 1000px;"></div>
+		<br>
+		Container 2:<br>
+		<div id="container2" style="height: 700px; width: 1000px;"></div>
 	</body>
 </html>
